# warehouse_allocation

./: .coveragerc  Dockerfile  LICENSE  README.MD  pyproject.toml  tox.ini
.github/workflows/: github-actions-demo.yml.yml  test-build.yml
docs/: conf.py  index.rst  refs.bib
docs/contents/: Algoritmos.rst  Callback.ipynb  Formulacion.rst  Operadores.ipynb  Problemas.ipynb  SlottingProblem.rst  Solvers.ipynb
tests/: test_pymooslotting.py
tests/algorithms/: conftest.py  test_algorithms.py  test_atypical.py
tests/algorithms/data/: test_data1  test_data2
tests/models/: test_chung.py
tests/operators/: conftest.py  test_crossover.py  test_duplicates.py  test_lap.py  test_mutation.py  test_sampling.py
warehouse_allocation/: __init__.py  _logging.py  exc.py  settings.py
warehouse_allocation/algorithms/: __init__.py  algorithms_moo.py
warehouse_allocation/models/: __init__.py  bases.py  chung.py  chung_not_constraints.py  chung_so.py
warehouse_allocation/operators/: __init__.py  callback.py  crossover.py  duplicates.py  lap.py  mutation.py  sampling.py
